Work on fixing compilation and JUnit testing with "mvn clean install"